  28 Feb 2019; Horea Christian <h.chr@mail.ru> gebuilder-9999.ebuild:
  app-misc/gebuilder: removed .gentoo traces

  28 Feb 2019; Horea Christian <h.chr@mail.ru> gebuilder-9999.ebuild:
  app-misc/gebuilder: installing form correct dir

*gebuilder-9999 (27 Feb 2019)

  27 Feb 2019; Horea Christian <h.chr@mail.ru> +gebuilder-9999.ebuild,
  +metadata.xml:
  app-misc/gebuilder: new package