@@ -1,11 +1,14 @@
 # Copyright 1999-2019 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
-EAPI=6
+EAPI=7
+
+inherit git-r3
 
 DESCRIPTION="Gentoo System and Image Builder"
 HOMEPAGE="https://github.com/IBT-FMI/gebuilder"
 SRC_URI=""
+EGIT_REPO_URI="git@github.com:IBT-FMI/gebuilder.git"
 
 LICENSE="GPL-3"
 SLOT="0"
